# telemt-admin

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: db.rs  main.rs  service.rs
src/bot/: handlers.rs  keyboards.rs
src/bot/handlers/: format.rs  menu.rs  shared.rs  state.rs
src/bot/handlers/callbacks/: mod.rs
src/bot/handlers/commands/: mod.rs
