[package]
name = "telemt-admin"
version = "0.1.3"
edition = "2024"

[dependencies]
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
toml_edit = "0.25"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9"
hex = "0.4"
chrono = "0.4"
urlencoding = "2.1.3"
